[project]
name = "hbni-audio-archive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "asyncpg>=0.30.0",
    "firebase-admin>=7.1.0",
    "jinja2>=3.1.6",
    "msgspec>=0.19.0",
    "python-dotenv>=1.1.1",
    "tornado>=6.5.2",
]
